# edna

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  configure.ac  edna.pc.in  sample-edna.conf
include/: edna.h
src/: Makefile.am
src/common/: edna_bytestring.cpp  edna_bytestring.h  edna_proto.h
src/lib/: Makefile.am  edna_lib_export.cpp
src/samples/: Makefile.am  edna_client_sample.cpp
